--- a/style.css
+++ b/style.css
@@ -10,11 +10,19 @@ body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
         Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
         sans-serif;
-    display: flex;flex-direction: column;
-    justify-content: center;align-items: center;
+    display: flex;flex-direction: row;
+    align-items: center; justify-content: space-evenly;
+    height: 100vh;
 }
 body::-webkit-scrollbar {
     display: none;
+}
+body >div{
+    width: 45%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 button {
     background-color: transparent;
@@ -24,8 +32,11 @@ h1{text-align: center;}
 a{color: #fff;text-decoration: none;}
 .heading{
     display: flex;flex-direction: column;
-    justify-content: center;width: 100%;
-    margin-top: 2rem;
+    justify-content: start;
+    width: 50%!important;
+}
+.heading>*{
+    width: 100%;
 }
 #heading-name{
     background-color: transparent;color: #fff;
@@ -35,11 +46,11 @@ a{color: #fff;text-decoration: none;}
     display: none;
 }
 
+
 #search-container {
     display: flex;
     gap: 0.2rem;
-    margin-top: 2rem;
-    width: 63%;justify-content: center;
+    width: 65%;justify-content: center;
 }
 #search-input-container > input,
 #search-input-container > input:focus,
@@ -69,19 +80,14 @@ a{color: #fff;text-decoration: none;}
 }
 
 #favourite-card-container{
-    display: flex;flex-direction: column;
+    display: flex;flex-direction: row;
     justify-content: center;align-items: center;
-    margin: auto;margin: 4rem 0;width: 63%;
-}
-#favourite-card-container-row{
-    display: flex;
-    margin-top: 0.5rem;
-    gap: 0.5rem;
-    width: 100%;justify-content: center;
+    margin: auto;margin: 4rem 0;width: 65%;
+    gap: 0.5rem; flex-wrap: wrap;
 }
 #favourite-card {
     display: flex;
-    width: 50%;
+    width: 42%;
     align-items: center;
     background-color: #495057;
     gap: 0.7rem;
